--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,6 +5,8 @@
   </div>
   <ul>
     <li><a href="/" class="link">Blogs</a></li>
+    <li><a href="/sign-up" class="link">Log In</a></li>
+    <li><a href="/login" class="link">Sign-up</a></li>
     <li><a href="/about" class="link">About</a></li>
     <li><a href="/blogs/create" class="link">New Blog</a></li>
   </ul>
