connected to mongodb

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,11 +3,16 @@
     <a href="/"><h1>Moheb's Blogs</h1></a>
     <p>Moheb's Blogspot</p>
   </div>
-  <ul>
-    <li><a href="/" class="link">Blogs</a></li>
-    <li><a href="/sign-up" class="link">Log In</a></li>
-    <li><a href="/login" class="link">Sign-up</a></li>
-    <li><a href="/about" class="link">About</a></li>
-    <li><a href="/blogs/create" class="link">New Blog</a></li>
-  </ul>
+  <div>
+    <div class="info">
+      <h3>Welcome, Moheb</h3>
+      <a href="/log-out" class="logbtn">Log Out</a>
+    </div>
+    <ul>
+      <li><a href="/" class="link">Blogs</a></li>
+      <li><a href="/sign-up" class="link">Sign Up</a></li>
+      <li><a href="/about" class="link">About</a></li>
+      <li><a href="/blogs/create" class="link">New Blog</a></li>
+    </ul>
+  </div>
 </nav>
