--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,13 +5,16 @@
     <%- include("./partials/nav.ejs") %>
 
     <div class="create-blog content">
-      <form action="/log-in">
+      <form action="/sign-up">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" required />
         <div class="email error"></div>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
         <div class="password error"></div>
+        <label for="c_password">Confirm Password:</label>
+        <input type="password" id="c_password" name="c_password" required />
+        <div class="c_password error"></div>
         <button>Submit</button>
       </form>
     </div>
