--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,17 @@
 <html lang="en">
-  <%- include('./partials/header.ejs') %>
-
+  <%- include ('./partials/header.ejs') %>
   <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include ('./partials/nav.ejs') %>
     <div class="content blogs">
       <h2>All Blogs</h2>
-      <% if (blogs && blogs.length>0) {blogs.forEach(blog=>{ %>
-      <h3>This is the first Blog</h3>
-      <p>This is the short summary</p>
+      <% if(blogs.length > 0){blogs.forEach(blog=>{%>
+      <h3><%= blog.title %></h3>
+      <p><%= blog.snippet %></p>
       <% })} else { %>
+
       <p>There are no blogs 😢</p>
-
-      <% } %>
+      <%}%>
     </div>
-
-    <%- include('./partials/footer.ejs') %>
+    <%- include ('./partials/footer.ejs') %>
   </body>
 </html>
