--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,11 +6,11 @@
   <div>
     <div class="info">
       <h3>Welcome, Moheb</h3>
-      <a href="/log-out" class="logbtn">Log Out</a>
+      <a href="/log-in" class="logbtn">Log In</a>
     </div>
     <ul>
-      <li><a href="/" class="link">Blogs</a></li>
-      <li><a href="/sign-up" class="link">Sign Up</a></li>
+      <li><a href="/blogs" class="link">Blogs</a></li>
+      <li><a href="/-" class="link">Sign Up</a></li>
       <li><a href="/about" class="link">About</a></li>
       <li><a href="/blogs/create" class="link">New Blog</a></li>
     </ul>
