--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,14 @@
     <div class="content blogs">
       <h2>All Blogs</h2>
       <% if(blogs.length > 0){blogs.forEach(blog=>{%>
-      <h3><%= blog.title %></h3>
-      <p><%= blog.snippet %></p>
+      <div class="blog">
+        <a href="blogs/<%=blog._id%>"><h3><%= blog.title %></h3></a>
+        <p><%= blog.snippet %></p>
+      </div>
       <% })} else { %>
-
-      <p>There are no blogs 😢</p>
+      <div class="blog">
+        <p>There are no blogs 😢</p>
+      </div>
       <%}%>
     </div>
     <%- include ('./partials/footer.ejs') %>
