Added Login and Signup Auth

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
     </div>
     <ul>
       <li><a href="/blogs" class="link">Blogs</a></li>
-      <li><a href="/-" class="link">Sign Up</a></li>
+      <li><a href="/sign-up" class="link">Sign Up</a></li>
       <li><a href="/about" class="link">About</a></li>
       <li><a href="/blogs/create" class="link">New Blog</a></li>
     </ul>
