--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -5,7 +5,7 @@
     <%- include("./partials/nav.ejs") %>
 
     <div class="create-blog content">
-      <form action="/login" method="POST">
+      <form action="" method="">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" required />
         <div class="email error"></div>
@@ -18,11 +18,40 @@
 
     <%- include("./partials/footer.ejs") %>
     <script>
-      // const form = document.querySelectorAll('form')
+      const form = document.querySelector("form");
+      const emailError = document.querySelector(".email.error");
+      const passwordError = document.querySelector(".password.error");
 
-      // form.addEventListener("submit", async (e) => {
-      //   e,
-      // }
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        console.log("here");
+
+        emailError.textContent = "";
+        passwordError.textContent = "";
+
+        const email = form.email.value;
+        const password = form.password.value;
+
+        try {
+          const res = await fetch("/log-in", {
+            method: "POST",
+            body: JSON.stringify({ email, password }),
+            headers: { "Content-type": "application/json" },
+          });
+
+          const data = await res.json();
+          if (data.errors) {
+            passwordError.textContent = data.errors.password;
+          }
+
+          if (data.user) {
+            location.assign("/");
+          }
+        } catch (err) {
+          console.log(err);
+        }
+      });
     </script>
   </body>
 </html>
