--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -10,7 +10,7 @@
         <input type="text" id="email" name="email" required />
         <div class="email error"></div>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required />
+        <input type="password" id="password" name="password" />
         <div class="password error"></div>
         <label for="c_password">Confirm Password:</label>
         <input type="password" id="c_password" name="c_password" required />
@@ -38,7 +38,27 @@
         const c_password = form.c_password.value;
 
         if (password !== c_password) {
-          c_passwordError.textContent = "Passwords Do'not Match";
+          return (c_passwordError.textContent = "Passwords Do'not Match");
+        }
+
+        try {
+          const res = await fetch("/sign-up", {
+            method: "POST",
+            body: JSON.stringify({ email, password }),
+            headers: { "Content-type": "application/json" },
+          });
+
+          const data = await res.json();
+          console.log(data);
+          if (data.errors) {
+            emailError.textContent = data.errors.email;
+            passwordError.textContent = data.errors.password;
+          }
+          if (data.user) {
+            location.assign("/");
+          }
+        } catch (err) {
+          console.log(err);
         }
       });
     </script>
