--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,10 @@
   <div>
     <div class="info">
       <% if(user){ %>
-      <h3>Welcome, <%= user.email %></h3>
+      <h3 class="login-box">
+        Welcome,&nbsp;
+        <p><%= user.email %></p>
+      </h3>
       <a href="/log-out" class="logbtn">Log Out</a>
       <%} else {%>
       <a href="/log-in" class="logbtn">Log In</a>
@@ -14,7 +17,10 @@
     </div>
     <ul>
       <li><a href="/blogs" class="link">Blogs</a></li>
+
+      <% if(!user){ %>
       <li><a href="/sign-up" class="link">Sign Up</a></li>
+      <% } %>
       <li><a href="/about" class="link">About</a></li>
       <li><a href="/blogs/create" class="link">New Blog</a></li>
     </ul>
